# CMakeTalk

./: .gitignore
Demo1/: CMakeLists.txt
Demo1/src/: Lib.cpp
Demo2/: CMakeLists.txt
Demo2/lib/: CMakeLists.txt
Demo2/lib/include/: Lib.hpp
Demo2/tests/: CMakeLists.txt
Demo2/tests/src/: LibTests.cpp
Slides (html)/: index.html
